--- a/ui/FindCameraDialog.ui
+++ b/ui/FindCameraDialog.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>304</width>
+    <height>231</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Select Camera</string>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>260</y>
-     <width>341</width>
-     <height>32</height>
+     <x>0</x>
+     <y>200</y>
+     <width>301</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="orientation">
@@ -32,10 +32,10 @@
   <widget class="QListWidget" name="listWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>0</x>
      <y>10</y>
-     <width>381</width>
-     <height>251</height>
+     <width>301</width>
+     <height>191</height>
     </rect>
    </property>
   </widget>
