--- a/ui/KukaVisionUIV1.ui
+++ b/ui/KukaVisionUIV1.ui
@@ -36,7 +36,7 @@
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="cameraViewWidget">
        <property name="sizePolicy">
@@ -103,22 +103,6 @@
            </widget>
           </item>
           <item>
-           <widget class="QCheckBox" name="checkingCheckBox">
-            <property name="enabled">
-             <bool>true</bool>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>Checking</string>
-            </property>
-           </widget>
-          </item>
-          <item>
            <widget class="QCheckBox" name="outlinesCheckBox">
             <property name="text">
              <string>Outlines</string>
@@ -135,7 +119,7 @@
           <item>
            <widget class="QPushButton" name="stoppCameraViewButton">
             <property name="text">
-             <string>Stopp CameraView</string>
+             <string>Stop CameraView</string>
             </property>
            </widget>
           </item>
@@ -190,7 +174,7 @@
         <item row="3" column="0">
          <widget class="QLabel" name="cameraViewInfoLabel">
           <property name="text">
-           <string>Camera-FPS : -- Draw-FPS: --</string>
+           <string>Camera-FPS : -- </string>
           </property>
          </widget>
         </item>
@@ -235,7 +219,7 @@
           <item row="1" column="0">
            <widget class="QLabel" name="robotIPLabel">
             <property name="text">
-             <string>IP</string>
+             <string>IP-Address</string>
             </property>
            </widget>
           </item>
@@ -255,17 +239,21 @@
           <item row="3" column="0">
            <widget class="QLabel" name="zOffsetLabel">
             <property name="text">
-             <string>Z-Offset</string>
+             <string>Travel Height</string>
             </property>
            </widget>
           </item>
           <item row="3" column="1">
-           <widget class="QLineEdit" name="zOffsetLneEdit"/>
+           <widget class="QLineEdit" name="zOffsetLneEdit">
+            <property name="cursorMoveStyle">
+             <enum>Qt::LogicalMoveStyle</enum>
+            </property>
+           </widget>
           </item>
           <item row="4" column="0">
            <widget class="QLabel" name="zOffsetFinalLabel">
             <property name="text">
-             <string>Z-Offset Final</string>
+             <string>Gripping Height</string>
             </property>
            </widget>
           </item>
@@ -274,225 +262,14 @@
           </item>
          </layout>
         </item>
-        <item row="2" column="0">
-         <layout class="QFormLayout" name="cameraOptionsLayout">
-          <property name="topMargin">
-           <number>20</number>
+        <item row="2" column="2">
+         <widget class="Line" name="line_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
           </property>
-          <property name="rightMargin">
-           <number>10</number>
-          </property>
-          <item row="0" column="0">
-           <widget class="QLabel" name="cameraOptionsLabel">
-            <property name="text">
-             <string>Camera-Options</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <spacer name="horizontalSpacer_5">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="cameraIPLabel">
-            <property name="text">
-             <string>IP</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QLineEdit" name="cameraIPLineEdit"/>
-          </item>
-          <item row="2" column="0">
-           <widget class="QLabel" name="exposureLabel">
-            <property name="text">
-             <string>Exposure</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1">
-           <widget class="QLineEdit" name="exposureLineEdit"/>
-          </item>
-          <item row="3" column="0">
-           <widget class="QLabel" name="fpsLiveViewLabel">
-            <property name="text">
-             <string>FPS for Live-View</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="1">
-           <widget class="QLineEdit" name="fpsLiveViewLineEdit"/>
-          </item>
-          <item row="6" column="0">
-           <widget class="QLabel" name="emptyCameraOptionsLabel">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="1">
-           <widget class="QCheckBox" name="triggerOnCheckBox">
-            <property name="text">
-             <string>Flip Image </string>
-            </property>
-           </widget>
-          </item>
-          <item row="7" column="0">
-           <spacer name="verticalSpacer">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="4" column="0">
-           <widget class="QLabel" name="biningLabel">
-            <property name="text">
-             <string>Bining</string>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="0">
-           <widget class="QLabel" name="gainLabel">
-            <property name="text">
-             <string>Gain</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="1">
-           <widget class="QLineEdit" name="biningValueLineEdit"/>
-          </item>
-          <item row="5" column="1">
-           <widget class="QLineEdit" name="gainValueLineEdit"/>
-          </item>
-         </layout>
+         </widget>
         </item>
-        <item row="2" column="1">
-         <layout class="QGridLayout" name="cameraOptions2Layout">
-          <property name="leftMargin">
-           <number>10</number>
-          </property>
-          <property name="topMargin">
-           <number>20</number>
-          </property>
-          <property name="rightMargin">
-           <number>10</number>
-          </property>
-          <item row="1" column="0" colspan="2">
-           <widget class="QLabel" name="findCameraLabel">
-            <property name="text">
-             <string>Find the IP and Port of Cameras in the network</string>
-            </property>
-            <property name="wordWrap">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="1">
-           <spacer name="verticalSpacer_5">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="2" column="0" colspan="2">
-           <widget class="Line" name="dividerCameraOptionsline">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="0">
-           <widget class="QLineEdit" name="dataSavePathLineEdit"/>
-          </item>
-          <item row="0" column="0">
-           <widget class="QPushButton" name="findCameraButton">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>200</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>Find Camera</string>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="0">
-           <widget class="QPushButton" name="openConsoleButton">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>200</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="text">
-             <string>Open Console</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="1">
-           <widget class="QPushButton" name="folderDialogButton">
-            <property name="text">
-             <string>Folder</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="0">
-           <widget class="QLabel" name="dataSavePathLabel">
-            <property name="text">
-             <string>Imagedata save path</string>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="0">
-           <spacer name="verticalSpacer_4">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-         </layout>
-        </item>
-        <item row="0" column="1" rowspan="2">
+        <item row="0" column="2" rowspan="2">
          <layout class="QGridLayout" name="workingAreagridLayout">
           <item row="2" column="1">
            <widget class="QLabel" name="yminLabel">
@@ -562,6 +339,209 @@
            <widget class="QLineEdit" name="zmaxValueLineEdit"/>
           </item>
          </layout>
+        </item>
+        <item row="2" column="0">
+         <widget class="Line" name="line">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <layout class="QFormLayout" name="cameraOptionsLayout">
+          <property name="topMargin">
+           <number>20</number>
+          </property>
+          <property name="rightMargin">
+           <number>10</number>
+          </property>
+          <item row="0" column="0">
+           <widget class="QLabel" name="cameraOptionsLabel">
+            <property name="text">
+             <string>Camera-Options</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <spacer name="horizontalSpacer_5">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="cameraIPLabel">
+            <property name="text">
+             <string>IP-Address</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QLineEdit" name="cameraIPLineEdit"/>
+          </item>
+          <item row="2" column="0">
+           <widget class="QLabel" name="fpsLiveViewLabel">
+            <property name="text">
+             <string>Acquisition Framerate</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QLineEdit" name="fpsLiveViewLineEdit"/>
+          </item>
+          <item row="3" column="0">
+           <widget class="QLabel" name="biningLabel">
+            <property name="text">
+             <string>Bining</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <widget class="QLineEdit" name="biningValueLineEdit"/>
+          </item>
+          <item row="4" column="0">
+           <widget class="QLabel" name="gainLabel">
+            <property name="text">
+             <string>Gain</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1">
+           <widget class="QLineEdit" name="gainValueLineEdit"/>
+          </item>
+          <item row="5" column="0">
+           <widget class="QLabel" name="emptyCameraOptionsLabel">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="0">
+           <spacer name="verticalSpacer">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </item>
+        <item row="3" column="2">
+         <layout class="QGridLayout" name="cameraOptions2Layout">
+          <property name="leftMargin">
+           <number>10</number>
+          </property>
+          <property name="topMargin">
+           <number>20</number>
+          </property>
+          <property name="rightMargin">
+           <number>10</number>
+          </property>
+          <item row="4" column="0">
+           <widget class="QLabel" name="dataSavePathLabel">
+            <property name="text">
+             <string>Imagedata save path</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <spacer name="verticalSpacer_6">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="2" column="0" colspan="2">
+           <widget class="QLabel" name="findCameraLabel">
+            <property name="text">
+             <string>Find the IP and Port of Cameras in the network</string>
+            </property>
+            <property name="wordWrap">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QPushButton" name="findCameraButton">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>200</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Find Camera</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="0">
+           <widget class="QLineEdit" name="dataSavePathLineEdit"/>
+          </item>
+          <item row="6" column="1">
+           <spacer name="verticalSpacer_5">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="3" column="0" colspan="2">
+           <widget class="Line" name="dividerCameraOptionsline">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="1">
+           <widget class="QPushButton" name="folderDialogButton">
+            <property name="text">
+             <string>Folder</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="3" column="1">
+         <widget class="Line" name="line_3">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="Line" name="line_4">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -815,26 +795,39 @@ background-color: rgb(224, 27, 36);</string>
    </property>
   </action>
  </widget>
+ <tabstops>
+  <tabstop>outlinesCheckBox</tabstop>
+  <tabstop>startCameraViewButton</tabstop>
+  <tabstop>stoppCameraViewButton</tabstop>
+  <tabstop>saveImageButton</tabstop>
+  <tabstop>robotIPLineEdit</tabstop>
+  <tabstop>robotPortLineEdit</tabstop>
+  <tabstop>zOffsetLneEdit</tabstop>
+  <tabstop>zOffsetFinalLineEdit</tabstop>
+  <tabstop>cameraIPLineEdit</tabstop>
+  <tabstop>fpsLiveViewLineEdit</tabstop>
+  <tabstop>biningValueLineEdit</tabstop>
+  <tabstop>gainValueLineEdit</tabstop>
+  <tabstop>xminValueLineEdit</tabstop>
+  <tabstop>yminValueLineEdit</tabstop>
+  <tabstop>zminValueLineEdit</tabstop>
+  <tabstop>xmaxValueLineEdit</tabstop>
+  <tabstop>ymaxValueLineedit</tabstop>
+  <tabstop>zmaxValueLineEdit</tabstop>
+  <tabstop>findCameraButton</tabstop>
+  <tabstop>dataSavePathLineEdit</tabstop>
+  <tabstop>folderDialogButton</tabstop>
+  <tabstop>coordinatesCheckBox</tabstop>
+  <tabstop>tabWidget</tabstop>
+  <tabstop>safetyCheckCheckBox</tabstop>
+  <tabstop>getCoordinatesButton</tabstop>
+  <tabstop>startRobotButton</tabstop>
+  <tabstop>infoConsoleTextBrowser</tabstop>
+ </tabstops>
  <resources>
   <include location="UI_Image.png"/>
  </resources>
  <connections>
-  <connection>
-   <sender>openConsoleButton</sender>
-   <signal>clicked()</signal>
-   <receiver>consoleWindowDockWidget</receiver>
-   <slot>show()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>645</x>
-     <y>501</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>532</x>
-     <y>626</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>actionOpen_Console</sender>
    <signal>triggered()</signal>
