--- a/ui/ProjectInfoWindow.ui
+++ b/ui/ProjectInfoWindow.ui
@@ -1,133 +1,185 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Project_Info</class>
- <widget class="QWidget" name="Project_Info">
+ <class>Dialog</class>
+ <widget class="QDialog" name="Dialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>435</width>
-    <height>299</height>
+    <width>417</width>
+    <height>252</height>
    </rect>
   </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
-  </property>
   <property name="windowTitle">
-   <string>Project-Info</string>
+   <string>Dialog</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0">
-    <widget class="Line" name="line">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="8" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="4" column="0">
-    <widget class="QLabel" name="ProjectInfoMoreLabel">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>More informations can be found in the wiki</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="ProjectInfoHeadlineLabel">
-     <property name="text">
-      <string>This project was made by Renko Stahlschmidt, Sarah Vásquez and Alexander Klaus in a project at the HSBI. </string>
-     </property>
-     <property name="scaledContents">
-      <bool>true</bool>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="0">
-    <widget class="QLabel" name="EmailLabel2">
-     <property name="text">
-      <string>sarah_daniela.vasquez@hsbi.de</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0">
-    <widget class="QLabel" name="InfoProgramLabel">
-     <property name="text">
-      <string>The program detects objects by a camera and identifies them with OpenCV and sends the calculated coordinates via Ethernet KRL to a Kuka robot. </string>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0">
-    <widget class="Line" name="line_2">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="0">
-    <widget class="QLabel" name="EmailLabel1">
-     <property name="text">
-      <string>Renko.Stahlschmidt@hsbi.de</string>
-     </property>
-    </widget>
-   </item>
-   <item row="7" column="0">
-    <widget class="QLabel" name="EmailLabel3">
-     <property name="text">
-      <string>Alexander.Klaus@hsbi.de</string>
-     </property>
-    </widget>
-   </item>
-   <item row="9" column="0">
-    <widget class="QPushButton" name="ProjectInfoCloseButton">
-     <property name="text">
-      <string>Close</string>
-     </property>
-    </widget>
-   </item>
-  </layout>
+  <widget class="QDialogButtonBox" name="buttonBox">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>220</y>
+     <width>341</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+   <property name="standardButtons">
+    <set>QDialogButtonBox::Ok</set>
+   </property>
+  </widget>
+  <widget class="Line" name="line">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>44</y>
+     <width>417</width>
+     <height>3</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="ProjectInfoMoreLabel">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>119</y>
+     <width>417</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="text">
+    <string>More informations can be found in the wiki</string>
+   </property>
+  </widget>
+  <widget class="Line" name="line_2">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>110</y>
+     <width>417</width>
+     <height>3</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="EmailLabel2">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>165</y>
+     <width>417</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>sarah_daniela.vasquez@hsbi.de</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="ProjectInfoHeadlineLabel">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>4</y>
+     <width>417</width>
+     <height>34</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>This project was made by Renko Stahlschmidt, Sarah Vásquez and Alexander Klaus in a project at the HSBI. </string>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="EmailLabel3">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>188</y>
+     <width>417</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Alexander.Klaus@hsbi.de</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="InfoProgramLabel">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>53</y>
+     <width>417</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>The program detects objects by a camera and identifies them with OpenCV and sends the calculated coordinates via Ethernet KRL to a Kuka robot. </string>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="EmailLabel1">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>142</y>
+     <width>417</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Renko.Stahlschmidt@hsbi.de</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections>
   <connection>
-   <sender>ProjectInfoCloseButton</sender>
-   <signal>clicked()</signal>
-   <receiver>Project_Info</receiver>
-   <slot>close()</slot>
+   <sender>buttonBox</sender>
+   <signal>accepted()</signal>
+   <receiver>Dialog</receiver>
+   <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>217</x>
-     <y>277</y>
+     <x>248</x>
+     <y>254</y>
     </hint>
     <hint type="destinationlabel">
-     <x>217</x>
-     <y>149</y>
+     <x>157</x>
+     <y>274</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>rejected()</signal>
+   <receiver>Dialog</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>316</x>
+     <y>260</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>286</x>
+     <y>274</y>
     </hint>
    </hints>
   </connection>
